# randy

./: .gitignore  Cargo.toml  readme.md  run_practrand.sh  rustfmt.toml
src/: bench.rs  lib.rs  pcg.rs  practrand_input.rs  rand_support.rs  rng.rs  tester.rs  tests.rs
