[package]
name = "randy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
rand = ["dep:rand"]


[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1

[[bin]]
name = "practrand_input"
path = "src/practrand_input.rs"
